Fixes wrapping of words

--- a/style/style.scss
+++ b/style/style.scss
@@ -154,7 +154,7 @@ pre.pre {
   line-height: initial;
   margin: 0 0 10px;
   padding: initial;
-  word-break: break-all;
+  word-break: break-word;
   word-wrap: break-word;
   white-space: pre-wrap;
 }
